# data_sci_python_project_template

./: README.md  pyproject.toml
src/: config.py
